Fixed Modal Overflow Issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,8 +9,6 @@
 
 }
 
-
-html,
 body {
   padding: 0;
   margin: 0;
@@ -29,10 +27,12 @@ body {
 
 
 .about--wave {
-	margin-top: -8rem;
+	margin-top: -24rem;
 	position: absolute;
 	left: 50%;
-	transform: translateX(-50%);
+  transform: translateX(-50%);
+	max-width: 100%;
+	height: 65%;
 }
 
 /* Banner Styles*/
@@ -212,9 +212,8 @@ nav {
 }
 
 .info {
-  position: absolute;
-  left: 2rem;
-  bottom: 2rem;
+	margin-top: 2rem;
+	z-index: 50;
 }
 .info a {
   font-size: 45px;
