--- a/styles/modal.css
+++ b/styles/modal.css
@@ -107,8 +107,8 @@ ReactModal__Overlay--after-open {
 /* HOVER STATES */
 .Modal button:hover, .Modal button:focus {
   opacity: 0.9;
-  transform: translateY(-0.5rem);
-  box-shadow: 0px 1rem 0.5rem rgba(59, 102, 206, 0.3);
+  transform: translateY(-0.3rem);
+  box-shadow: 0px 0.5rem 0.5rem rgba(59, 102, 206, 0.3);
 }
 
 
